Fixed some layout issues. and improving logger

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    flex: 1 1 auto;
     flex-direction: column;
     margin: 0;
 }
@@ -22,6 +21,26 @@ body {
     flex: 0 0 64px;
     display: flex;
     flex-direction: row;
+    height: 100%;
+    width: 100%;
+    
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    border-bottom-color: #888;
+}
+
+.small-header {
+    flex: 0 0 20px;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+    
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    border-bottom-color: #888;
 }
 
 .header .title {
@@ -35,6 +54,7 @@ body {
     height: 100%;
     flex-direction: row;
     justify-content: center;
+    overflow: hidden;
 }
 
 .window {
@@ -48,6 +68,7 @@ body {
     width: 100%;
     height: 100%;
     overflow-y: auto;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .big {
@@ -72,4 +93,10 @@ body {
     flex: 0 0 64px;
     display: flex;
     flex-direction: row;
+    height: 100%;
+    width: 100%;
+    border-top-width: 1px;
+    border-style: solid;
+    border-color: transparent;
+    border-top-color: #888;
 }
